# gfft

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  Numlist.h  README  bench.cpp  check.cpp  dl.h  ffttest.cpp  finit.h  gfft.cpp  gfft.files  gfft.h  gfft.includes  gfft.kdev4  gfft.kdevelop  gfftalg.h  gfftconf.h  gfftdoc.h  gfftomp.h  gfftpolicy.h  gfftstdalg.h  metafunc.h  numtypelist.h  sbigint.h  sfraction.cpp  sfraction.h  sint.h
doc/: Doxyfile  footer.html
doc/css/: customdoxygen.css
loki/: AssocVector.h  Functor.h  HierarchyGenerators.h  Singleton.h  SmartPtr.h  Visitor.h
sbigint/: sbigint.h  sfraction.cpp
src/: CMakeLists.txt  Numlist.h  bench.cpp  cgfft.cpp  cgfft_inp.cpp  cgfft_oop.cpp  check.cpp  direct.h  ffttest.cpp  finit.h  gfft.cpp  gfft.h  gfft_inp.cpp  gfft_oop.cpp  gfftalg.h  gfftalgfreq.h  gfftcaller.h  gfftconf.h  gfftdoc.h  gfftfactor.h  gfftgen.h  gfftint.h  gfftomp.h  gfftparamgroups.h  gfftpolicy.h  gfftspec.h  gfftspec_inp.h  gfftstdalg.h  gfftstdspec.h  gfftswap.h  metacomplex.h  metaf.cpp  metafunc.h  metapi.cpp  metapi.h  metapow.h  metaroot.h  metasincos.h  metasqrt.cpp  metasqrt.h  (+11 more)
src/loki/: Typelist.h
test/: CMakeLists.txt  README  bench.cpp  check.cpp  gfft_accuracy.cpp  gfft_accuracy.h  gfft_bench.cpp  gfft_performance.cpp  gfft_performance.h  gfftimport.sh  list.php  mflops.sh  nrfft.h  thirdparty.h  timer.h
trunk/: CMakeLists.txt  README  bench.sh  test_accuracy.sh
trunk/src/: CMakeLists.txt  cgfft_inp.cpp  cgfft_oop.cpp  direct.h  finit.h  gfft.cpp  gfft.h  gfft_inp.cpp  gfft_oop.cpp  gfftalg.h  gfftalgfreq.h  gfftcaller.h  gfftdoc.h  gfftfactor.h  gfftgen.h  gfftomp.h  gfftparamgroups.h  gfftpolicy.h  gfftspec.h  gfftspec_inp.h  gfftstdalg.h  gfftstdspec.h  gfftswap.h  metacomplex.h  metaf.cpp  metafunc.h  metapi.cpp  metapi.h  metaroot.h  metasincos.h  metasqrt.cpp  metasqrt.h  numtypelist.h  pseudometafunc.h  sbigint.h  sdecimal.h  sint.h  srational.h  thirdparty.h  twiddles.h  (+2 more)
trunk/test/: CMakeLists.txt  bench.cpp  check.cpp  gfft_accuracy.cpp  gfft_accuracy.h  gfft_performance.cpp  timer.h
